--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
+    "expo-image-loader": "^3.2.0",
     "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.10",
+    "firebase-admin": "^10.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-uuid": "^2.0.1",
